--- a/templates/module2.html
+++ b/templates/module2.html
@@ -125,7 +125,10 @@
 <body>
     <div class="header">
         <h1>Module 2: Template Matching</h1>
-        <a href="/dashboard" class="back-btn">← Back</a>
+        <div class="header-actions">
+            <a href="https://drive.google.com/file/d/1hKJFFDx4c_hfD_z1khOp8Z-Sc7aJnmzp/view?usp=drive_link" target="_blank" class="demo-btn">▶ Watch Demo</a>
+            <a href="/dashboard" class="back-btn">← Back</a>
+        </div>
     </div>
 
     <div class="container">
