--- a/templates/module5.html
+++ b/templates/module5.html
@@ -70,7 +70,10 @@
 <body>
     <div class="header">
         <h1>Module 5-6: Object Tracking</h1>
-        <a href="/dashboard" class="back-btn">← Back</a>
+        <div class="header-actions">
+            <a href="https://drive.google.com/file/d/1ChVklU72AKq_byl9fdULRVQysqf2L2s4/view?usp=drive_link" target="_blank" class="demo-btn">▶ Watch Demo</a>
+            <a href="/dashboard" class="back-btn">← Back</a>
+        </div>
     </div>
 
     <div class="container">
