--- a/templates/module1.html
+++ b/templates/module1.html
@@ -110,7 +110,10 @@
 <body>
     <div class="header">
         <h1>Module 1: Dimension Estimation</h1>
-        <a href="/dashboard" class="back-btn">← Back</a>
+        <div class="header-actions">
+            <a href="https://drive.google.com/file/d/1LytJLehiciO4VC9kjhDkwPtPRt06PoXG/view?usp=drive_link" target="_blank" class="demo-btn">▶ Watch Demo</a>
+            <a href="/dashboard" class="back-btn">← Back</a>
+        </div>
     </div>
 
     <div class="container">
