--- a/templates/module3.html
+++ b/templates/module3.html
@@ -73,7 +73,10 @@
 <body>
     <div class="header">
         <h1>Module 3: Feature Detection</h1>
-        <a href="/dashboard" class="back-btn">← Back</a>
+        <div class="header-actions">
+            <a href="https://drive.google.com/file/d/1d1ssctZ9s2dgLW4jB07PXqwWU3aSfO9N/view?usp=drive_link" target="_blank" class="demo-btn">▶ Watch Demo</a>
+            <a href="/dashboard" class="back-btn">← Back</a>
+        </div>
     </div>
 
     <div class="container">
