--- a/templates/module4.html
+++ b/templates/module4.html
@@ -32,7 +32,10 @@
 <body>
     <div class="header">
         <h1>Module 4: Image Stitching</h1>
-        <a href="/dashboard" class="back-btn">← Back</a>
+        <div class="header-actions">
+            <a href="https://drive.google.com/file/d/1AJCbqFa26ehlR-2wHzBXv0j9ZxAFihLn/view?usp=drive_link" target="_blank" class="demo-btn">▶ Watch Demo</a>
+            <a href="/dashboard" class="back-btn">← Back</a>
+        </div>
     </div>
 
     <div class="container">
