--- a/templates/module7.html
+++ b/templates/module7.html
@@ -59,7 +59,10 @@
 <body>
     <div class="header">
         <h1>Module 7: Pose & Hand Tracking</h1>
-        <a href="/dashboard" class="back-btn">← Back</a>
+        <div class="header-actions">
+            <a href="https://drive.google.com/file/d/1pLpPk2gxPLY5YK8Zx7MOpbhlTl9QUaHe/view?usp=drive_link" target="_blank" class="demo-btn">▶ Watch Demo</a>
+            <a href="/dashboard" class="back-btn">← Back</a>
+        </div>
     </div>
 
     <div class="container">
